Return "null" as initiator for requests initiated from a unique origin.

Events in chrome.webRequest.* include an optional initiator
string. When the origin that initiated a request was unique the
initiator was not populated. This makes it difficult to tell the
difference between requests that had no actual initiator and those with
a unique initiator.

This change returns the keyword "null" when a request was initiated
from a unique origin. An example of a unique origin is the Data URI.

Bug: 812819
Change-Id: I24b824a37196fba4a4d7474232ce962e017cf3f4
Reviewed-on: https://chromium-review.googlesource.com/922931
Commit-Queue: Nick Peterson <nrpeter@chromium.org>
Reviewed-by: Devlin <rdevlin.cronin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#538495}