chrome/test/data/extensions/api_test/webrequest/test_types.js
@@ -153,6 +153,7 @@ runTests([
           // tabId 0 = tab opened by test runner;
           // tabId 1 = this tab.
           tabId: 1,
+          initiator: "null",
         }
       },
       { label: 'onBeforeSendHeaders',
@@ -163,6 +164,7 @@ runTests([
           frameId: 1,
           parentFrameId: 0,
           tabId: 1,
+          initiator: "null",
         },
       },
       { label: 'onSendHeaders',
@@ -173,6 +175,7 @@ runTests([
           frameId: 1,
           parentFrameId: 0,
           tabId: 1,
+          initiator: "null",
         },
       },
       { label: 'onHeadersReceived',
@@ -185,6 +188,7 @@ runTests([
           tabId: 1,
           statusLine: 'HTTP/1.1 200 OK',
           statusCode: 200,
+          initiator: "null",
         },
       },
       { label: 'onResponseStarted',
@@ -199,6 +203,7 @@ runTests([
           fromCache: false,
           statusLine: 'HTTP/1.1 200 OK',
           statusCode: 200,
+          initiator: "null",
         },
       },
       { label: 'onCompleted',
@@ -213,6 +218,7 @@ runTests([
           fromCache: false,
           statusLine: 'HTTP/1.1 200 OK',
           statusCode: 200,
+          initiator: "null",
         },
       }],
       [['onBeforeRequest', 'onBeforeSendHeaders', 'onSendHeaders',
